Wed Oct 29 23:57:29 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* array.c (rb_ary_sort_bang): replacing array during sort broke
          invariant of array.

Wed Oct 29 20:45:08 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/webrick/utils.rb (start_server): provide a reference to log of
	  webrick.

	* test/webrick/test_httpproxy.rb, test/webrick/test_httpauth.rb,
	  test/webrick/test_cgi.rb, test/webrick/test_httpserver.rb,
	  test/webrick/test_server.rb, test/webrick/test_filehandler.rb: use
	  webrick log as an assertion message.

Wed Oct 29 11:50:57 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (dln-a-out): cannot make shared library nor work with
	  ELF.  [ruby-core:19571]

Wed Oct 29 11:01:46 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_open): shouldn't seek here.

	* win32/win32.c (rb_w32_write): write to the end of the file when
	  FAPPEND is specified.

Wed Oct 29 09:30:04 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (load_file_internal): use ASCII-8BIT to prevent conversion.
	  [ruby-core:19579]

	* ruby.c (load_file_internal): cache common interned IDs.

Wed Oct 29 00:43:39 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: uses macro in declarations.

Wed Oct 29 00:29:46 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_open): need to seek to the end of the file when
	  O_APPEND is specified.

Wed Oct 29 00:08:05 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* math.c (rb_math_{atan2,cos,cosh,hypot,log,sin,sinh,sqrt}): added.

	* complex.c: follows the above change.

Tue Oct 28 23:29:06 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c (kanji_convert): output unicode chars.
	  [ruby-dev:36957]

	* ext/nkf/nkf-utf8/nkf.c (numchar_getc): increase buffer size.
	  reported and patched at [ruby-dev:36957] by mame.

Tue Oct 28 23:03:46 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/ruby/test_proc.rb: filled all patterns for testing
	  vm_yield_setup_args.
