@@ -1,3 +1,8 @@
+Thu Oct 30 01:10:32 2008  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* test/ruby/test_array (test_permutation): add a test that replaces
+	  array during permutation.
+
 Wed Oct 29 23:57:29 2008  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* array.c (rb_ary_sort_bang): replacing array during sort broke
